Fixed FireFox scrollbar and added condition for changing color mid-poly-draw in ShapeProfileBase

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   user-select: none;
+  scrollbar-width: none;
 }
 
 h1 {
@@ -41,6 +42,10 @@ h5 {
 }
 
 ::-webkit-scrollbar {
+  display: none;
+}
+
+.scroller {
   display: none;
 }
 
